--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,9 @@
     <string name="message_no_email_client">There is no any email client on your phone</string>
     <string name="disclaimer" formatted="true" translatable="false">"© 2018 %s"</string>
     <string name="language">Language</string>
-    <string name="menu_item_language">Language</string>
 
-    <string-array name="supported_languages">
-        <item>Russian</item>
-        <item>English</item>
-    </string-array>
+    <string name="menu_item_language">@string/language</string>
+
+    <string name="language_russian">Russian</string>
+    <string name="language_english">English</string>
 </resources>
