--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
 
     <string name="content_description_send_message">Button to send message</string>
     <string name="content_description_developer_photo">Developer photo</string>
+    <string name="content_description_facebook_link">Link to developer page on Facebook</string>
+    <string name="content_description_telegram_link">Link to developer page on Telegram</string>
 </resources>
